Enhance AI insights and savings goals logic  (#8)
* Ignore IDE files, build artifacts, and virtual environments

* Enhance AI insights and savings goals logic